WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165617
Custom Elements from a different document are not customized when created with innerHTML
https://bugs.webkit.org/show_bug.cgi?id=165617
Summary
Custom Elements from a different document are not customized when created wit...
Keanu Lee
Reported
2016-12-08 12:28:49 PST
If you create a custom element in a different document (e.g. `doc = document.implementation.createHTMLDocument()`) by setting `innerHTML` on a container element in that document, then try to `appendChild` the container element to the current document, the custom element is not customized. Note that it is customized if the custom element was created using `doc.createElement()` instead.
http://jsbin.com/qaqitem/edit?html,output
Attachments
Fixes the bug
(9.91 KB, patch)
2016-12-08 21:22 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2016-12-08 21:22:50 PST
Created
attachment 296635
[details]
Fixes the bug
WebKit Commit Bot
Comment 2
2016-12-09 09:55:26 PST
Comment on
attachment 296635
[details]
Fixes the bug Clearing flags on attachment: 296635 Committed
r209610
: <
http://trac.webkit.org/changeset/209610
>
WebKit Commit Bot
Comment 3
2016-12-09 09:55:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug