Custom Elements from a different document are not customized when created with innerHTML https://bugs.webkit.org/show_bug.cgi?id=165617

Reviewed by Antti Koivisto.

Source/WebCore:

The bug was caused by a superflous null check on window in createHTMLElementOrFindCustomElementInterface.
Removed the nullcheck to fix the bug.

Test: fast/custom-elements/adopting-from-frameless-document.html

* html/parser/HTMLConstructionSite.cpp:
(WebCore::HTMLConstructionSite::createHTMLElementOrFindCustomElementInterface):

LayoutTests:

Added a W3C style testharness.js test.

* fast/custom-elements/adopting-from-frameless-document-expected.txt: Added.
* fast/custom-elements/adopting-from-frameless-document.html: Added.


Canonical link: https://commits.webkit.org/183266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209610 268f45cc-cd09-0410-ab3c-d52691b4dbfc